@@ -1,207 +1,154 @@
+<?xml version="1.0" encoding="utf-8"?>
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
+	
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.activiti</groupId>
+	<groupId>net.atos.bpmn</groupId>
 	<artifactId>activiti-webapp-monitor</artifactId>
-	<version>5.11</version>
+	<version>5.13y</version>
 	<packaging>war</packaging>
+	
 	<name>activiti-webapp-monitor Tapestry 5 Application</name>
-        <parent>
-            <groupId>org.kazansource</groupId>
-            <artifactId>kazan-parent</artifactId>
-            <version>3</version>
-        </parent>
+    <dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>net.atos.xa</groupId>
+				<artifactId>release</artifactId>
+				<version>2.3.0-SNAPSHOT</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.source>1.7</java.source>
+		<java.target>1.7</java.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<repositories>
+		<repository>
+			<id>Alfresco Maven Repository</id>
+			<url>https://maven.alfresco.com/nexus/content/groups/public/</url>
+		</repository>
+		<repository>
+			<id>proxiedRepositories</id>
+			<name>Kazan and common proxied repositories</name>
+			<url>http://kazan.priv.atos.fr/nexus/content/repositories/public/</url>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>proxiedPluginRepositories</id>
+			<name>Kazan and common proxied plugins repositories</name>
+			<url>http://kazan.priv.atos.fr/nexus/content/repositories/public/</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<dependencies>
-		<!-- Too set up an application with a database, change the artifactId below 
-			to tapestry-hibernate, and add a dependency on your JDBC driver. You'll also 
-			need to add Hibernate configuration files, such as hibernate.cfg.xml. -->
-
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.21</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tapestry</groupId>
 			<artifactId>tapestry-core</artifactId>
-			<version>${tapestry-release-version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.tapestry</groupId>
 			<artifactId>tapestry-spring</artifactId>
-			<version>${tapestry-release-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.activiti</groupId>
-			<artifactId>activiti-engine</artifactId>
-			<version>${activiti.version}</version>
 		</dependency>
 
-		<!-- This adds automatic compression of JavaScript and CSS when in production 
-			mode. -->
-		<dependency>
-			<groupId>org.apache.tapestry</groupId>
-			<artifactId>tapestry-yuicompressor</artifactId>
-			<version>${tapestry-release-version}</version>
-		</dependency>
-
-		<!-- Uncomment this to add support for file uploads: <dependency> <groupId>org.apache.tapestry</groupId> 
-			<artifactId>tapestry-upload</artifactId> <version>${tapestry-release-version}</version> 
-			</dependency> -->
-
-		<!-- A dependency on either JUnit or TestNG is required, or the surefire 
-			plugin (which runs the tests) will fail, preventing Maven from packaging 
-			the WAR. Tapestry includes a large number of testing facilities designed 
-			for use with TestNG (http://testng.org/), so it's recommended. -->
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>${testng-release-version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-			<version>${easymock-release-version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.tapestry</groupId>
-			<artifactId>tapestry-test</artifactId>
-			<version>${tapestry-release-version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- Provided by the servlet container, but sometimes referenced in the 
-			application code. -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>${servlet-api-release-version}</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- Provide dependency to the Tapestry javadoc taglet which replaces the 
-			Maven component report -->
-		<dependency>
-			<groupId>org.apache.tapestry</groupId>
-			<artifactId>tapestry-javadoc</artifactId>
-			<version>${tapestry-release-version}</version>
-			<scope>provided</scope>
-		</dependency>
 		<dependency> 
 			<groupId>org.tynamo</groupId> 
 			<artifactId>tapestry-security</artifactId> 
-			<version>0.4.6</version> 
+			<version>0.5.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>		
+
 		<dependency>
 			<groupId>net.atos.tapestry</groupId>
 			<artifactId>tapestry5-kawwa-components</artifactId>
-			<version>2.0.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-spring</artifactId>
-			<version>${activiti.version}</version>
 		</dependency>
+		
 	</dependencies>
+	
+	<profiles>
+		<profile>
+			<id>mysql</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<hibernate.dialect>org.hibernate.dialect.MySQLDialect</hibernate.dialect>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
+	
 	<build>
 		<finalName>activiti-webapp-monitor</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-					<optimize>true</optimize>
+					<source>${java.source}</source>
+					<target>${java.target}</target>
 				</configuration>
 			</plugin>
-
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.7.2</version>
+				<groupId>org.apache.openejb.maven</groupId>
+				<artifactId>tomee-maven-plugin</artifactId>
 				<configuration>
-					<systemPropertyVariables>
-						<tapestry.execution-mode>Qa</tapestry.execution-mode>
-					</systemPropertyVariables>
-				</configuration>
-			</plugin>
+					<tomeeVersion>1.5.1</tomeeVersion>
+					<removeDefaultWebapps>true</removeDefaultWebapps>
+					<!-- to have additional tomEE plus features (CXF, Active MQ, Geronimo 
+						Connector), uncomment this line: -->
+					<!--tomeeClassifier>plus</tomeeClassifier -->
+					
+					<debug>false</debug>
+					<debugPort>5005</debugPort>
+					<args>-Xms256m -Xmx512m -XX:MaxPermSize=256M</args>
 
-			<!-- Run the application using "mvn jetty:run" -->
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.16</version>
-				<configuration>
-					<scanIntervalSeconds>1</scanIntervalSeconds>
-					<!-- Log to the console. -->
-					<requestLog implementation="org.mortbay.jetty.NCSARequestLog">
-						<!-- This doesn't do anything for Jetty, but is a workaround for a 
-							Maven bug that prevents the requestLog from being set. -->
-						<append>true</append>
-					</requestLog>
-					<systemProperties>
-						<systemProperty>
-							<name>tapestry.execution-mode</name>
-							<value>development</value>
-						</systemProperty>
-					</systemProperties>
+					<synchronization>
+						<binariesDir>${project.build.directory}/classes</binariesDir>
+						<targetBinariesDir>${project.build.directory}/apache-tomee/webapps/${project.build.finalName}/WEB-INF/classes</targetBinariesDir>
+						<resourcesDir>${project.basedir}/src/main/webapp</resourcesDir>
+						<targetResourcesDir>${project.build.directory}/apache-tomee/webapps/${project.build.finalName}</targetResourcesDir>
+						<updateInterval>10</updateInterval>
+						<extensions>
+							<extension>.class</extension>
+							<extension>.tml</extension>
+						</extensions>
+					</synchronization>
+					<libs>
+						<lib>mysql:mysql-connector-java:5.1.22</lib>
+					</libs>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 	<reporting />
 
-	<repositories>
-
-		<!-- This repository is only needed when the Tapestry version is a preview 
-			release, rather than a final release. -->
-		<repository>
-			<id>apache-staging</id>
-			<url>https://repository.apache.org/content/groups/staging/</url>
-		</repository>
-		<repository>
-			<!-- This repository is mapped to a Maven2 proxy. This one gives access 
-				to O&D and common Maven2 repositories -->
-			<id>proxiedRepositories</id>
-			<name>OD and common proxied repositories</name>
-			<url>http://repository.atosworldline.com/nexus/content/groups/public</url>
-		</repository>
-	</repositories>
-
-	<properties>
-		<tapestry-release-version>5.3.6</tapestry-release-version>
-		<servlet-api-release-version>2.5</servlet-api-release-version>
-		<testng-release-version>5.14.10</testng-release-version>
-		<easymock-release-version>3.0</easymock-release-version>
-		<activiti.version>5.11</activiti.version>
-	</properties>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-core</artifactId>
-				<version>3.1.2.RELEASE</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-web</artifactId>
-				<version>3.1.2.RELEASE</version>
-			</dependency>
-			<dependency>
-				<groupId>org.got5</groupId>
-				<artifactId>tapestry5-jquery</artifactId>
-				<version>3.3.5</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 </project>
